k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aegisml-scan-engine-svc
spec:
  type: ClusterIP
  selector:
    app: scan-engine
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
