k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aegisml-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - api.aegisml.com
    secretName: aegisml-tls
  rules:
  - host: api.aegisml.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aegisml-scan-engine-svc
            port:
              number: 8000
